[package]
authors = [ "Louis Quinnell <_@ziorobo.co>" ]
edition = "2018"
name    = "grrs"
version = "0.1.0"

[dependencies]
exitfailure = "0.5.1"
failure = "0.1.8"
log = "0.4.8"
simplelog = "0.8.0"
structopt = "0.3.14"

[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1.0.4"
tempfile = "3.1.0"
